--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
